# Clock

./: .env_newsettimer  Alarm.desktop  Play_track.py  Play_track.ui  Proba.py  Qttimerpy.py  README.md  Sec.py  Sec.ui  Sec2.ui  Set_timer.py  Seс2.py  Seс21.py  a_t_s.py  a_t_s_1.py  addAlarm.py  addAlarm.ui  alarm.py  alarm.ui  alarm_data.json  alarm_item.py  alarm_item.ui  bat.sh  btnCheck.py  config.py  data.json  data_in_to_json.py  main.py  main1.py  main1_checkBox.py  newsettimer.py  newsettimer.ui  pyproject.toml  s_t.py  s_t.ui  s_t_2.py  s_t_2.ui  s_t_21.py  s_t_211.py  sec.py  (+9 more)
